--- a/Experiment Wizard/src/stats.cfg
+++ b/Experiment Wizard/src/stats.cfg
@@ -7,24 +7,24 @@ p2
 cdatetime
 datetime
 p3
-(S'\x07\xdb\x06\x07\x0f5:\x03\x01\x88'
+(S'\x07\xdb\x06\x08\x01:$\x05\xdc\x00'
 p4
 tp5
 Rp6
 sS'experimentsRun'
 p7
-I2
+I8
 sS'stimuliDisplayed'
 p8
-I18
+I72
 sS'totalRunTime'
 p9
 cdatetime
 timedelta
 p10
 (I0
-I1707
-I180000
+I26266
+I418000
 tp11
 Rp12
 sS'installDate'
