--- a/Experiment Wizard/.settings/org.eclipse.core.resources.prefs
+++ b/Experiment Wizard/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Tue Jun 07 22:53:40 CEST 2011
+#Tue Oct 18 13:45:53 CEST 2011
 eclipse.preferences.version=1
+encoding//src/gui.py=utf-8
 encoding//src/slideshowDialog.py=utf-8
