--- a/Experiment Wizard/src/stats.cfg
+++ b/Experiment Wizard/src/stats.cfg
@@ -7,30 +7,30 @@ p2
 cdatetime
 datetime
 p3
-(S'\x07\xdb\x06\x08\x01:$\x05\xdc\x00'
+(S'\x07\xdb\n\x12\x0f2#\x0e\x9aH'
 p4
 tp5
 Rp6
 sS'experimentsRun'
 p7
-I8
+I6
 sS'stimuliDisplayed'
 p8
-I72
+I22
 sS'totalRunTime'
 p9
 cdatetime
 timedelta
 p10
-(I0
-I26266
-I418000
+(I1
+I21923
+I88000
 tp11
 Rp12
 sS'installDate'
 p13
 g3
-(S'\x07\xdb\x06\x07\x0f\x19\x1f\x00\x1f@'
+(S"\x07\xdb\n\x05\x10!'\x07\xc4H"
 p14
 tp15
 Rp16
